--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -807,7 +807,7 @@ label {
   }
 }
 
-// slider 너비 조정
+// slider
 .#{$common-prefix}slider {
   .#{$common-prefix}range {
     --range-fill-color: #{$slider-range-fill-color};
