--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1400,12 +1400,18 @@ label {
   content: "";
 }
 
+.z-slider {
+  min-height: 1.375rem;
+}
 .z-slider .z-range {
   --range-fill-color: #339AF0;
   --range-location: 100%;
   -webkit-appearance: none;
   appearance: none;
+  width: 75%;
+  max-width: 15rem;
   height: 0.375rem;
+  padding: 0;
   border-radius: 0.25rem;
   -webkit-border-radius: 0.25rem;
   -moz-border-radius: 0.25rem;
@@ -1475,6 +1481,17 @@ label {
 .z-slider .z-range::-moz-range-thumb:disabled {
   border-color: #CFD5D9;
   background-color: #EEEEEE;
+}
+.z-slider .z-input {
+  width: 23%;
+  text-align: center;
+  margin-left: 2%;
+}
+.z-slider .z-input:read-only {
+  border: 0.0625rem solid #CFD5D9;
+  border-radius: 0.125rem;
+  -webkit-border-radius: 0.125rem;
+  -moz-border-radius: 0.125rem;
 }
 
 h6 {
