--- a/src/main/resources/public/scss/template/_elements.scss
+++ b/src/main/resources/public/scss/template/_elements.scss
@@ -809,12 +809,16 @@ label {
 
 // slider
 .#{$common-prefix}slider {
+  min-height: 1.375rem; // 22px
   .#{$common-prefix}range {
     --range-fill-color: #{$slider-range-fill-color};
     --range-location: 100%;
     -webkit-appearance: none;
     appearance: none;
+    width : 75%;
+    max-width: 15rem; // 240px
     height: 0.375rem; // 6px
+    padding: 0;
     @include borderRadius(0.25rem); // 4px
     background: linear-gradient(to right, var(--range-fill-color) 0%, var(--range-fill-color) var(--range-location), $slider-range-bg-color var(--range-location), $slider-range-bg-color 100%);
     outline: 0;
@@ -868,6 +872,15 @@ label {
         border-color: $slider-thumb-disabled-border-color;
         background-color: $slider-thumb-disabled-bg-color;
       }
+    }
+  }
+  .#{$common-prefix}input {
+    width: 23%;
+    text-align: center;
+    margin-left: 2%;
+    &:read-only {
+      @include border($element-border-width, solid, $gray300, all);
+      @include borderRadius(0.125rem); // 2px
     }
   }
 }
