--- a/src/main/resources/public/scss/formDesigner/formDesigner.scss
+++ b/src/main/resources/public/scss/formDesigner/formDesigner.scss
@@ -11,6 +11,7 @@
 @import '../template/_variables.scss'; // 상속 불가
 @import '../template/_mixins.scss'; // 상속 불가
 @import '../template/_utilities.scss'; // 상속 불가
+@import '../template/_icons.scss'; // 공통 아이콘
 @import '_variables.scss';
 @import '_layout.scss';
 @import '_elements.scss';
